Added cvt.utils, for now just a couple of cv2 wrappers to handle named windows. Changed trial loading. To fix: when computing the cuts frame numbers are being used as dataframe indices, which is a problem when the tracking doesn't start at the beginning of the video.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -53,7 +53,7 @@
     "</b></style>\n",
     "</div>\n",
     "\n",
-    "Change the value of `input_file` below to specify the path to the video you want to analyze (absolute and relative paths both accepted).\n"
+    "Change the value of `input_file` below to specify the path to the video you want to analyze (absolute and relative paths both accepted)."
    ]
   },
   {
@@ -65,7 +65,8 @@
     "tracking_dir = '../tracking'\n",
     "\n",
     "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi'\n",
-    "input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi'"
+    "input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi'\n",
+    "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi'"
    ]
   },
   {
@@ -181,13 +182,7 @@
     "\n",
     "settings = set_up_tracking(input_file)\n",
     "globals().update(settings)\n",
-    "# display(settings)\n",
-    "\n",
-    "# tank = Tank(new_input_file,tank_radius,output_dir=output_dir)\n",
-    "# if os.path.exists(tank_file):\n",
-    "#     tank.load(tank_file)\n",
-    "# else:\n",
-    "#     tank.locate()"
+    "# display(settings)"
    ]
   },
   {
@@ -220,22 +215,20 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Unable to load Trial from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n",
-      "\n",
       "        Generating new Trial object.\n",
       "\n",
-      "        Tank not found /media/data/work/fau/research/trilab/astyanax_larval_schooling/tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
+      "        Tank not found ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
       "    Locating tank edges... \n",
       "\n",
       "       Tank detection complete.\n",
       "\n",
-      "        Tank object saved as /media/data/work/fau/research/trilab/astyanax_larval_schooling/tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
+      "        Tank object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
       "2 individuals in trial\n",
       "4\n",
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:03:23 \n",
+      "       Current tracking time: 00:01:00:73 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -261,8 +254,9 @@
     "save_settings()\n",
     "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
-    "trial = Trial(fvideo_raw=new_input_file, output_dir=output_dir, n=Nfish, t=pop, \n",
-    "              date=date, fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
+    "trial = Trial()\n",
+    "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
     "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
@@ -311,14 +305,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Trial loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n",
+      "        Generating new Trial object.\n",
+      "\n",
+      "        Tank object loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
       "2 individuals in trial\n",
       "Using MOG2 Background Subtraction\n",
       "4\n",
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:00:86 \n",
+      "       Current tracking time: 00:01:00:90 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -343,8 +339,9 @@
     "save_settings()\n",
     "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
-    "trial = Trial(fvideo_raw=new_input_file, output_dir=output_dir, n=Nfish, t=pop, \n",
-    "              date=date, fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
+    "trial = Trial()\n",
+    "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
     "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
@@ -387,14 +384,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:13.742645\n",
+      "0:00:13.449710\n",
       "Background obtained by averaging every 500th frame over the entire video:\n"
      ]
     },
@@ -462,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -506,13 +503,15 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "        Trial loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n",
+      "        Generating new Trial object.\n",
+      "\n",
+      "        Tank object loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
       "2 individuals in trial\n",
       "20\n",
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:00:96 \n",
+      "       Current tracking time: 00:01:00:70 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -538,8 +537,9 @@
     "save_settings()\n",
     "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
-    "trial = Trial(fvideo_raw=new_input_file, output_dir=output_dir, n=Nfish, t=pop, \n",
-    "              date=date, fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
+    "trial = Trial()\n",
+    "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
+    "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
     "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
