- Replaced "Trial.__init__" with a minimalistic constructor after which one needs to call either "trial.init" or "trial.load". - Fixed issue with frame numbers being interpreted as dataframe row indices in "Trial.evaluate_cuts" (specifically the computation of the cuts). - Added "Analyze.ipynb" which computes the same basics statistics that were in Adam's demo. The figures are now written in a "figures" subdirectory of the output directory. Added the dictionary "Trial.plot_options" which gets passed to every plotting command. Its default value is "dict(dpi=150)". - In "CVTracer.connect", improved the handling of "worst case" scenarios e.g. zero contours on the very first frame. When no information is available positions and/or angles are set to numpy.nan. This fixes the issue of MOG2 background subtraction crashing when nothing moves in the first few frames. - Added the option to pick what "CVTracer.draw" draws on the video output. - TO DO: In some of the histogram figures the fish look identical even though that's clearly not the case in the video. Investigate.

--- a/Track.ipynb
+++ b/Track.ipynb
@@ -15,6 +15,8 @@
     "- Windows: `C:\\Users\\yaouen\\larval_schooling\\raw_videos\\Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi`  \n",
     "- MacOS/Linux: `/home/yaouen/larval_schooling/raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi`\n",
     "\n",
+    "**Note**: It seems Windows uses backslashes by default but recognizes forward slashes as well, however MacOS and Linux only recognize forward slashes in this context. Therefore, **always write your paths with forwards slahes, never with backslashes**.\n",
+    "\n",
     "A relative path tells your computer how to get to the file of directory from wherever you are right now. When running a jupyter notebook, relative means relative to whatever directory the notebook is in.  Depending on your system it should look something like this:  \n",
     "\n",
     "- Windows: `..\\raw_videos\\Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi`  \n",
@@ -30,7 +32,10 @@
     "<pre>\n",
     "--larval_project\n",
     "   |\n",
-    "   |--cvtracer\n",
+    "   |--trilab-tracker\n",
+    "   |   |--cvt\n",
+    "   |   |--Analyze.ipynb\n",
+    "   |   |--Track.ipynb\n",
     "   |\n",
     "   |--raw_videos\n",
     "   |   |--Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
@@ -39,6 +44,37 @@
     "   |--tracking\n",
     "</pre>\n",
     "\n",
+    "For now the `tracking` directory is empty. Every time you analyze a new video, a new directory named after the video will be created automatically in the `tracking` directory to hold the output of the code. For example after tracking and analyzing the two videos above the directory layout will look something like this:\n",
+    "\n",
+    "<pre>\n",
+    "--larval_project\n",
+    "   |\n",
+    "   |--cvtracer\n",
+    "   |\n",
+    "   |--raw_videos\n",
+    "   |   |--Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi\n",
+    "   |   |--Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi\n",
+    "   |\n",
+    "   |--tracking\n",
+    "       |\n",
+    "       |--Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000\n",
+    "       |   |--figures\n",
+    "       |   |--background-500.npy\n",
+    "       |   |--tank.pik\n",
+    "       |   |--traced.mp4\n",
+    "       |   |--tracking_settings.txt\n",
+    "       |   |--trial.pik\n",
+    "       |\n",
+    "       |--Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000\n",
+    "           |--figures\n",
+    "           |--background-500.npy\n",
+    "           |--tank.pik\n",
+    "           |--traced.mp4\n",
+    "           |--tracking_settings.txt\n",
+    "           |--trial.pik\n",
+    "</pre>\n",
+    "\n",
+    "You don't have to create any of this by hand though, the code will do that on its own.\n",
     "\n",
     "### Pick an output directory for all the trials.\n",
     "\n",
@@ -58,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,15 +102,12 @@
     "\n",
     "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2_2020-06-05-120920-0000.avi'\n",
     "input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000.avi'\n",
-    "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# input_file = '../raw_videos/Pa_Fri_7dpf_GroupA_n5_2020-06-05-083453-0000.avi'\n",
+    "\n",
+    "#==================================================\n",
+    "# Don't edit below this line.\n",
+    "#==================================================\n",
+    "\n",
     "import platform, os, sys, datetime, re\n",
     "from os.path import join\n",
     "from glob import glob\n",
@@ -86,6 +119,7 @@
     "from cvt.TrAQ.Tank import Tank\n",
     "from cvt.TrAQ.Group import Group\n",
     "from cvt.TrAQ.CVTracer import CVTracer, create_named_window, wait_on_named_window\n",
+    "from cvt.utils import *\n",
     "\n",
     "       \n",
     "settings_list = [ # trial settings\n",
@@ -182,7 +216,23 @@
     "\n",
     "settings = set_up_tracking(input_file)\n",
     "globals().update(settings)\n",
-    "# display(settings)"
+    "# display(settings)\n",
+    "\n",
+    "\n",
+    "# Decide what information to draw on the tracking output video.\n",
+    "video_output_options = dict(tank=True, repeat_contours=True, all_contours=False, \n",
+    "                            contour_color=(0,255,255), contour_thickness=2, \n",
+    "                            points=False, directors=True, timestamp=True)\n",
+    "# # To get even more control write a custom drawing function like the one\n",
+    "# # below to use instead of \"cvt.draw(**video_output_options)\".\n",
+    "# def draw_cvt(cvt):\n",
+    "#     cvt.draw_tank(cvt.trial.tank)\n",
+    "# #     if ( len(self.contour_list) != self.n_ind ):\n",
+    "# #         cvt.draw_contour_repeat()\n",
+    "#     cvt.draw_contours()\n",
+    "# #     cvt.draw_points()\n",
+    "# #     cvt.draw_directors()\n",
+    "#     cvt.draw_tstamp()"
    ]
   },
   {
@@ -201,13 +251,12 @@
     "\n",
     "The first time you analyze a video, a single frame of it will pop up in a new window and you will have to **click on three points on the edge of the tank, then press the space bar twice**. This will create the file `tank.pik` in the output directory. The output directory is located inside the tracking directory we just defined in a subdirectory named after the input video file. If you run this notebook again on the same video file in the future it will load the pre-existing `tank.pik` file. If you want locate the tank again (e.g. because you screwed up the first time), delete the file `tank.pik` in the output directory (using your file browser) then execute this cell again.\n",
     "\n",
-    "\n",
     "## 2.1. No background subtraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -217,18 +266,13 @@
       "\n",
       "        Generating new Trial object.\n",
       "\n",
-      "        Tank not found ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
-      "    Locating tank edges... \n",
-      "\n",
-      "       Tank detection complete.\n",
-      "\n",
-      "        Tank object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
+      "        Tank object loaded from ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/tank.pik \n",
       "2 individuals in trial\n",
       "4\n",
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:00:73 \n",
+      "       Current tracking time: 00:01:08:30 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -240,27 +284,28 @@
     "# Parameter tweaking area.\n",
     "\n",
     "t_start,t_end = 60,70 # Times between which to track, in seconds.\n",
-    "# bkg_sub_amp   = 4    # Amplification factor applied after background subtraction.\n",
-    "n_pixel_blur  = 5    # square-root of n-pixels for threshold blurring\n",
-    "block_size    = 15   # contour block size\n",
-    "thresh_offset = 4    # threshold offset for contour-finding\n",
-    "min_area      = 40   # minimum area for threhold detection\n",
-    "max_area      = 100  # maximum area for threhold detection\n",
-    "online_viewer = True # False # \n",
+    "n_pixel_blur  = 5     # square-root of n-pixels for threshold blurring\n",
+    "block_size    = 15    # contour block size\n",
+    "thresh_offset = 4     # threshold offset for contour-finding\n",
+    "min_area      = 40    # minimum area for threhold detection\n",
+    "max_area      = 100   # maximum area for threhold detection\n",
+    "online_viewer = True\n",
+    "\n",
+    "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "                            contour_color=(0,200,255), contour_thickness=1, \n",
+    "                            points=False, directors=False, timestamp=True)\n",
     "\n",
     "#==========================================================================\n",
     "# Actual tracking.\n",
     "\n",
     "save_settings()\n",
-    "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
     "trial = Trial()\n",
     "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
     "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
-    "               frame_start=frame_start, frame_end=frame_end, \n",
+    "               threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
     "               online=online_viewer)\n",
     "\n",
     "try:\n",
@@ -272,10 +317,8 @@
     "            cvt.analyze_contours()\n",
     "            cvt.connect_frames()\n",
     "            cvt.update_trial()\n",
-    "            cvt.draw()\n",
+    "            cvt.draw(**video_output_options)\n",
     "            cvt.write_frame()\n",
-    "    #         if cvt.online_viewer:\n",
-    "    #             cvt.draw_contours()\n",
     "            if not cvt.post_frame(delay=1):\n",
     "                break\n",
     "            cvt.print_current_frame()\n",
@@ -297,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +357,7 @@
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:00:90 \n",
+      "       Current tracking time: 00:01:05:03 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -325,27 +368,29 @@
     "#==========================================================================\n",
     "# Parameter tweaking area.\n",
     "\n",
-    "t_start,t_end = 60,70 # Times between which to track, in seconds.\n",
+    "t_start,t_end = 60,65 # Times between which to track, in seconds.\n",
     "n_pixel_blur  = 3     # square-root of n-pixels for threshold blurring\n",
     "block_size    = 15    # contour block size\n",
     "thresh_offset = 4     # threshold offset for contour-finding\n",
-    "min_area      = 15    # minimum area for threhold detection\n",
+    "min_area      = 30    # minimum area for threhold detection\n",
     "max_area      = 150   # maximum area for threhold detection\n",
-    "online_viewer = True  # False # \n",
+    "online_viewer = True\n",
+    "\n",
+    "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "                            contour_color=(0,0,255), contour_thickness=1, \n",
+    "                            points=False, directors=False, timestamp=True)\n",
     "\n",
     "#==========================================================================\n",
     "# Actual tracking.\n",
     "\n",
     "save_settings()\n",
-    "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
     "trial = Trial()\n",
     "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
     "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
-    "               frame_start=frame_start, frame_end=frame_end, \n",
+    "               threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
     "               online=online_viewer, \n",
     "               MOG2=True)\n",
     "\n",
@@ -359,7 +404,7 @@
     "            cvt.analyze_contours()\n",
     "            cvt.connect_frames()\n",
     "            cvt.update_trial()\n",
-    "            cvt.draw()\n",
+    "            cvt.draw(**video_output_options)\n",
     "            cvt.write_frame()\n",
     "            if not cvt.post_frame(delay=1):\n",
     "                break\n",
@@ -368,7 +413,8 @@
     "    cvt.trial.save()\n",
     "except:\n",
     "    %tb\n",
-    "    cvt.release()"
+    "    cvt.release()\n",
+    "    \n"
    ]
   },
   {
@@ -377,21 +423,20 @@
    "source": [
     "## 2.3. Simple background subtraction\n",
     "\n",
-    "### 2.3.1. Compute the background\n",
+    "### Compute the background\n",
     "\n",
     "Compute the background by averaging frames over the entire video. Save it as `background.npy` in the output directory. Use the pre-existing file if there is one."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:00:13.449710\n",
       "Background obtained by averaging every 500th frame over the entire video:\n"
      ]
     },
@@ -454,48 +499,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.2. Preview simple background subtraction"
+    "### Preview simple background subtraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_skip = 100 # frame skipping rate\n",
+    "# n_skip = 100 # frame skipping rate\n",
     "\n",
-    "window_name = 'background subtraction preview'\n",
-    "create_named_window(window_name)\n",
-    "cap = cv2.VideoCapture(new_input_file)\n",
-    "n   = 0\n",
-    "while True:\n",
-    "#     for i in range(n_skip-1):\n",
-    "#         cap.grab()\n",
-    "    n += n_skip\n",
-    "    cap.set(cv2.CAP_PROP_POS_FRAMES,n)\n",
-    "    ret,frame = cap.read()\n",
-    "    if not ret:\n",
-    "        break\n",
-    "    diff = subtract_background(frame)\n",
-    "#     diff = cv2.GaussianBlur(diff,(5,)*2,0)\n",
-    "    cv2.imshow(window_name,diff)\n",
-    "    if wait_on_named_window(window_name,10)==-2:\n",
-    "        break\n",
-    "cap.release()\n",
-    "cv2.destroyAllWindows()"
+    "# window_name = 'background subtraction preview'\n",
+    "# create_named_window(window_name)\n",
+    "# cap = cv2.VideoCapture(new_input_file)\n",
+    "# n   = 0\n",
+    "# while True:\n",
+    "# #     for i in range(n_skip-1):\n",
+    "# #         cap.grab()\n",
+    "#     n += n_skip\n",
+    "#     cap.set(cv2.CAP_PROP_POS_FRAMES,n)\n",
+    "#     ret,frame = cap.read()\n",
+    "#     if not ret:\n",
+    "#         break\n",
+    "#     diff = subtract_background(frame)\n",
+    "# #     diff = cv2.GaussianBlur(diff,(5,)*2,0)\n",
+    "#     cv2.imshow(window_name,diff)\n",
+    "#     if wait_on_named_window(window_name,10)==-2:\n",
+    "#         break\n",
+    "# cap.release()\n",
+    "# cv2.destroyAllWindows()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3.3. Track with simple background subtraction"
+    "### Track with simple background subtraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +556,7 @@
       "Using Gaussian Adaptive Threshold\n",
       "Using Inverted Binary Threshold with [0, 100].\n",
       " Group of 2\n",
-      "       Current tracking time: 00:01:00:70 \n",
+      "       Current tracking time: 00:01:10:03 \n",
       "       Video capture released.\n",
       "\n",
       "        Trial object saved as ../tracking/Pa_Fri_7dpf_GroupA_n2b_2020-06-05-103456-0000/trial.pik \n"
@@ -529,21 +574,23 @@
     "thresh_offset = 20    # threshold offset for contour-finding\n",
     "min_area      = 20    # minimum area for threhold detection\n",
     "max_area      = 90    # maximum area for threhold detection\n",
-    "online_viewer = True  # False # \n",
+    "online_viewer = False\n",
+    "\n",
+    "video_output_options = dict(tank=True, repeat_contours=False, all_contours=True, \n",
+    "                            contour_color=(0,0,255), contour_thickness=1, \n",
+    "                            points=False, directors=True, timestamp=True)\n",
     "\n",
     "#==========================================================================\n",
     "# Actual tracking.\n",
     "\n",
     "save_settings()\n",
-    "frame_start,frame_end = int(t_start*fps),int(t_end*fps)\n",
     "\n",
     "trial = Trial()\n",
     "trial.init(video_file=new_input_file, output_dir=output_dir, n=Nfish, t=pop, date=date, \n",
     "           fps=fps, tank_radius=tank_radius, t_start=t_start, t_end=t_end)\n",
     "\n",
     "cvt = CVTracer(trial, n_pixel_blur=n_pixel_blur, block_size=block_size, \n",
-    "               threshold_offset=thresh_offset, min_area=min_area, view_scale=1, RGB=True,\n",
-    "               frame_start=frame_start, frame_end=frame_end, \n",
+    "               threshold_offset=thresh_offset, min_area=min_area, RGB=True,\n",
     "               online=online_viewer)\n",
     "\n",
     "try:\n",
@@ -556,7 +603,7 @@
     "            cvt.analyze_contours()\n",
     "            cvt.connect_frames()\n",
     "            cvt.update_trial()\n",
-    "            cvt.draw()\n",
+    "            cvt.draw(**video_output_options)\n",
     "            cvt.write_frame()\n",
     "            if not cvt.post_frame(delay=1):\n",
     "                break\n",
@@ -570,12 +617,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# cv2.destroyAllWindows()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
